[package]
authors = ["prokosna <prokosna@gmail.com>"]
name = "jongleur_back"
version = "0.2.3"

[dependencies]
base64 = "0.9.0"
blake2 = "0.7.0"
bson = "0.11.0"
dotenv = "0.10.1"
error-chain = "0.11.0"
jsonwebtoken = "2.0.3"
lazy_static = "1.0.0"
log = "0.4.1"
mongo_driver = "0.12.0"
mongodb = "0.3.7"
r2d2 = "0.8.2"
r2d2_redis = "0.7.0"
rand = "0.4.2"
redis = "0.8.0"
regex = "0.2.5"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
rocket_cors = "0.2.1"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
serde_urlencoded = "0.5.1"
time = "0.1.39"
url = "1.6.0"

[dependencies.chrono]
features = [
    "serde",
    "rustc-serialize",
]
version = "0.4.0"
